hw_07_aws_IaC/cloudformation-ec2-sg-etc/cloudformation-part-stack-vpc.json
{
    "Description": "AWS CloudFormation Template for VPC creation (with subnets, igs, nats, etc)",

    "Resources": {
        "Ec2InstanceVpc": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "Tags": [
                    { "Key": "Name", "Value": "itea-vps-hw7-cf" }
                ]
            }
        },

        "PublicSubnetA": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": { "Fn::Select": [ 0, { "Fn::GetAZs": "" } ] },
                "CidrBlock": "10.0.0.0/24",
                "MapPublicIpOnLaunch": "true",
                "VpcId": { "Ref": "Ec2InstanceVpc" },
                "Tags": [
                    { "Key": "Name", "Value": "itea-subnet-public-a-hw7-cf" }
                ]
            }
        },
        "PrivateSubnetB": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": { "Fn::Select": [ 1, { "Fn::GetAZs": "" } ] },
                "CidrBlock": "10.0.1.0/24",
                "MapPublicIpOnLaunch": "false",
                "VpcId": { "Ref": "Ec2InstanceVpc" },
                "Tags": [
                    { "Key": "Name", "Value": "itea-subnet-private-b-hw7-cf" }
                ]
            }
        },
        "PrivateSubnetC": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": { "Fn::Select": [ 2, { "Fn::GetAZs": "" } ] },
                "CidrBlock": "10.0.2.0/24",
                "MapPublicIpOnLaunch": "false",
                "VpcId": { "Ref": "Ec2InstanceVpc" },
                "Tags": [
                    { "Key": "Name", "Value": "itea-subnet-private-c-hw7-cf" }
                ]
            }
        },

        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    { "Key": "Name", "Value": "itea-igv-public-hw7-cf" }
                ]
            }
        },
        "AttachInternetGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": { "Ref": "InternetGateway" },
                "VpcId": { "Ref": "Ec2InstanceVpc" }
            }
        },

        "ElasticIpAllocation": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "NatGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": { "Fn::GetAtt" : ["ElasticIpAllocation", "AllocationId"] },
                "SubnetId": { "Ref": "PublicSubnetA" },
                "Tags": [
                    { "Key": "Name", "Value": "itea-nat-private-hw7-cf" }
                ]
            },
            "DependsOn" : "ElasticIpAllocation"
        },

        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "Ec2InstanceVpc" },
                "Tags": [
                    { "Key": "Name", "Value": "itea-rt-public-hw7-cf" }
                ]
            }
        },
        "PublicSubnetARouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "SubnetId": { "Ref": "PublicSubnetA" }
            }
        },
        "RouteForPublicSubnetRouteTable": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "InternetGateway" },
                "RouteTableId": { "Ref": "PublicRouteTable" }
            }
        },

        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "Ec2InstanceVpc" },
                "Tags": [
                    { "Key": "Name", "Value": "itea-rt-private-hw7-cf" }
                ]
            }
        },
        "PrivateSubnetBRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PrivateRouteTable" },
                "SubnetId": { "Ref": "PrivateSubnetB" }
            }
        },
        "PrivateSubnetCRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PrivateRouteTable" },
                "SubnetId": { "Ref": "PrivateSubnetC" }
            }
        },
        "RouteForPrivateSubnetRouteTable": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": { "Ref": "NatGateway" },
                "RouteTableId": { "Ref": "PrivateRouteTable" }
            },
            "DependsOn" : "NatGateway"
        }
    }
}
